--- a/heart animation/heart-animation.html
+++ b/heart animation/heart-animation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Heart Animation</title>
+    <title>nose321</title>
     <meta charset="UTF-8">
     <meta name="Keywords" >
     <meta name="Description">
